--- a/src/StringToEnum/StringToEnum.csproj
+++ b/src/StringToEnum/StringToEnum.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\PaymentStatus.cs" />
+    <Compile Include="ExtensionMethods\ConvertToEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
